// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Carousel Hero Details snapshot renders 1`] = `
<div
  className="carousel-hero-details text-outline-halo"
>
  <div
    className="carousel-hero-details-left"
  >
    <div>
      1
       of 
      135
    </div>
    <div>
      Sunflower Picking at Alstede Farm 2018-07-30
    </div>
  </div>
  <div
    className="carousel-hero-details-right"
  >
    <div>
      by 
      brianwhaley
    </div>
    <div>
      2018-07-30 15:21:06
    </div>
  </div>
</div>
`;

exports[`Carousel Carousel Hero Image snapshot renders 1`] = `
<img
  alt="Sunflower Picking at Alstede Farm 2018-07-30"
  className="carousel-hero-image carousel-hero-hidden"
  src="https://farm1.static.flickr.com/852/42079144500_c28146304a_b.jpg"
  style={
    Object {
      "zIndex": 134,
    }
  }
  title="Sunflower Picking at Alstede Farm 2018-07-30"
/>
`;

exports[`Carousel Carousel Slider Arrow Next snapshot renders 1`] = `
<div
  className="carousel-arrow text-outline-halo next"
  onClick={[MockFunction]}
>
  &#9654;
</div>
`;

exports[`Carousel Carousel Slider Arrow Prev snapshot renders 1`] = `
<div
  className="carousel-arrow text-outline-halo prev"
  onClick={[MockFunction]}
>
  &#9664;
</div>
`;

exports[`Carousel Carousel Slider Details snapshot renders 1`] = `
<div
  className="carousel-slider-details text-outline-halo"
>
  1
   of 
  135
   - 
  Sunflower Picking at Alstede Farm 2018-07-30
   
  <br />
  by 
  brianwhaley
   on 
  2018-07-30 15:21:06
</div>
`;

exports[`Carousel Carousel Slider Image snapshot renders 1`] = `
<div
  className="carousel-slider-container"
  draggable="true"
  id="c-42079144500"
  style={
    Object {
      "WebkitTransform": "translateX(100%)",
      "left": "0px",
      "msTransform": "translateX(100%)",
      "transform": "translateX(100%)",
      "transition": "all 1.0s ease-in 0.1s",
      "zIndex": 134,
    }
  }
>
  <img
    alt="Sunflower Picking at Alstede Farm 2018-07-30"
    className="carousel-slider-image"
    draggable="false"
    id="42079144500"
    src="https://farm1.static.flickr.com/852/42079144500_c28146304a_b.jpg"
    title="Sunflower Picking at Alstede Farm 2018-07-30"
  />
</div>
`;

exports[`Carousel Carousel snapshot renders 1`] = `
<div
  className="carousel"
/>
`;
